style : z-index bugfix try

--- a/before_after_test/style.css
+++ b/before_after_test/style.css
@@ -18,13 +18,13 @@ body {
     width: 350px;
     height: 500px;
     background: beige;
-    position: absolute;
+    position: relative;
     top: 50%;
     left: 50%;
     transform: translate(-50% , -50%);
     border-radius: 15px;
     box-shadow: 0px 0px 20px #1d1d1d;
-    z-index: 1000000;
+    z-index: 2;
 }
 .contain div::before {
     content: "";
@@ -34,7 +34,8 @@ body {
     border-radius: 15px;
     display: block;
     transition: 0.5s;
-    z-index: -1;
+    position: absolute;
+    z-index: 1;
 }
 .contain div::after {
     content: "";
@@ -46,13 +47,18 @@ body {
     position: absolute;
     top: 0;
     transition: 0.5s;
-    z-index: -2;
+    z-index: -10;
 }
 .contain div:hover::before {
+    position: absolute;
+    z-index: -1;
     transition: 0.5s;
     transform: rotate(10deg);
+
 }
 .contain div:hover::after {
     transition: 0.5s;
+    position: absolute;
+    z-index: -2;
     transform: rotate(20deg);
 }
